@@ -22,19 +22,17 @@ import org.gradle.initialization.StartParameterBuildOptions.ConfigurationCacheMa
 import org.gradle.initialization.StartParameterBuildOptions.ConfigurationCacheOption
 import org.gradle.initialization.StartParameterBuildOptions.ConfigurationCacheProblemsOption
 import org.gradle.integtests.fixtures.AvailableJavaHomes
-import org.gradle.integtests.fixtures.BuildOperationTreeFixture
 import org.gradle.integtests.fixtures.RepoScriptBlockUtil
-import org.gradle.integtests.fixtures.configurationcache.ConfigurationCacheBuildOperationsFixture
 import org.gradle.integtests.fixtures.executer.GradleContextualExecuter
 import org.gradle.integtests.fixtures.executer.IntegrationTestBuildContext
 import org.gradle.integtests.fixtures.versions.AndroidGradlePluginVersions
 import org.gradle.integtests.fixtures.versions.KotlinGradlePluginVersions
 import org.gradle.internal.featurelifecycle.LoggingDeprecatedFeatureHandler
-import org.gradle.internal.operations.trace.BuildOperationTrace
 import org.gradle.test.fixtures.dsl.GradleDsl
 import org.gradle.test.fixtures.file.TestFile
 import org.gradle.testkit.runner.GradleRunner
 import org.gradle.testkit.runner.internal.DefaultGradleRunner
+import org.gradle.util.internal.TextUtil
 import spock.lang.Specification
 import spock.lang.TempDir
 
@@ -55,139 +53,148 @@ abstract class AbstractSmokeTest extends Specification {
          * @see BuildScanPluginSmokeTest
          */
 
+        // https://plugins.gradle.org/plugin/biz.aQute.bnd
+        static bnd = "7.0.0"
+
         // https://plugins.gradle.org/plugin/com.netflix.nebula.dependency-recommender
-        static nebulaDependencyRecommender = "12.0.0"
+        static nebulaDependencyRecommender = "12.2.0"
 
         // https://plugins.gradle.org/plugin/com.netflix.nebula.plugin-plugin
-        static nebulaPluginPlugin = "20.0.0"
+        static nebulaPluginPlugin = "20.10.0"
 
-        // https://plugins.gradle.org/plugin/nebula.lint
-        static nebulaLint = "17.7.1"
+        // https://plugins.gradle.org/plugin/com.netflix.nebula.lint
+        static nebulaLint = "19.0.1"
 
         // https://plugins.gradle.org/plugin/org.jetbrains.gradle.plugin.idea-ext
-        static ideaExt = "1.1.6"
+        static ideaExt = "1.1.7"
 
         // https://plugins.gradle.org/plugin/com.netflix.nebula.dependency-lock
-        static nebulaDependencyLock = Versions.of("13.1.0")
+        static nebulaDependencyLock = Versions.of("15.0.0")
 
         // https://plugins.gradle.org/plugin/com.netflix.nebula.resolution-rules
-        static nebulaResolutionRules = "10.0.0"
+        static nebulaResolutionRules = "11.2.0"
 
         // https://plugins.gradle.org/plugin/com.github.johnrengelman.shadow
-        static shadow = Versions.of("7.0.0", "7.1.2")
+        static shadow = Versions.of("8.1.1")
 
-        // https://github.com/asciidoctor/asciidoctor-gradle-plugin/releases
-        static asciidoctor = Versions.of("3.3.2")
+        // https://github.com/asciidoctor/asciidoctor-gradle-plugin/tags
+        static asciidoctor = Versions.of("3.3.2", "4.0.2")
 
         // https://plugins.gradle.org/plugin/com.github.spotbugs
-        static spotbugs = "5.0.12"
+        static spotbugs = "6.0.4"
 
         // https://plugins.gradle.org/plugin/com.bmuschko.docker-java-application
-        static docker = "8.0.0"
-
-        // https://plugins.gradle.org/plugin/com.bmuschko.tomcat
-        static tomcat = "2.7.0"
+        static docker = "9.4.0"
 
         // https://plugins.gradle.org/plugin/io.spring.dependency-management
-        static springDependencyManagement = "1.0.14.RELEASE"
+        static springDependencyManagement = "1.1.4"
 
         // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-gradle-plugin
-        static springBoot = "2.7.3"
+        static springBoot = "3.2.1"
 
         // https://developer.android.com/studio/releases/build-tools
-        static androidTools = "30.0.2"
+        static androidTools = "34.0.0"
+
         // https://developer.android.com/studio/releases/gradle-plugin
-        static androidGradle = Versions.of(*AGP_VERSIONS.getLatestsFromMinorPlusNightly("4.0"))
+        static androidGradle = Versions.of(*AGP_VERSIONS.latestsPlusNightly)
 
         // https://search.maven.org/search?q=g:org.jetbrains.kotlin%20AND%20a:kotlin-project&core=gav
-        static kotlin = Versions.of(*KOTLIN_VERSIONS.latests.findAll {
-            def lowerCaseVersion = it.toLowerCase(Locale.US)
-            !lowerCaseVersion.contains('-m') && !(lowerCaseVersion.contains('-beta'))
-        })
+        static kotlin = Versions.of(*KOTLIN_VERSIONS.latests)
 
         // https://plugins.gradle.org/plugin/org.gretty
         static gretty = [
-            [version: "3.1.1", servletContainer: "jetty9.4", javaMinVersion: JavaVersion.VERSION_1_8],
-            [version: "4.0.3", servletContainer: "jetty11", javaMinVersion: JavaVersion.VERSION_11]
+            [version: "3.1.1", servletContainer: "jetty9.4", javaMinVersion: JavaVersion.VERSION_1_8, javaMaxVersion: JavaVersion.VERSION_20],
+            [version: "4.1.1", servletContainer: "jetty11", javaMinVersion: JavaVersion.VERSION_11]
         ]
 
         // https://plugins.gradle.org/plugin/org.ajoberstar.grgit
         static grgit = "4.1.1"
 
         // https://plugins.gradle.org/plugin/com.github.ben-manes.versions
-        static gradleVersions = "0.42.0"
+        static gradleVersions = "0.50.0"
 
         // https://plugins.gradle.org/plugin/org.gradle.playframework
-        static playframework = "0.13"
+        static playframework = "0.13" // Can't upgrade to 0.14 as it breaks CC compat - see https://github.com/gradle/playframework/issues/184
 
         // https://plugins.gradle.org/plugin/net.ltgt.errorprone
-        static errorProne = "2.0.2"
+        static errorProne = "3.1.0"
 
         // https://plugins.gradle.org/plugin/com.google.protobuf
-        static protobufPlugin = "0.9.2"
+        static protobufPlugin = "0.9.4"
 
-        static protobufTools = "3.21.5"
+        // https://central.sonatype.com/artifact/com.google.protobuf/protobuf-java/4.0.0-rc-2/versions
+        static protobufTools = "3.25.1"
 
         // https://plugins.gradle.org/plugin/org.gradle.test-retry
-        static testRetryPlugin = "1.5.0"
-
-        // https://plugins.gradle.org/plugin/com.jfrog.artifactory
-        static artifactoryPlugin = "4.29.0"
-        static artifactoryRepoOSSVersion = "6.16.0"
+        static testRetryPlugin = "1.5.8"
 
         // https://plugins.gradle.org/plugin/io.freefair.aspectj
-        static aspectj = "6.5.1"
+        static aspectj = "8.4"
 
         // https://plugins.gradle.org/plugin/de.undercouch.download
-        static undercouchDownload = Versions.of("5.1.2")
+        static undercouchDownload = Versions.of("5.5.0")
 
         // https://github.com/micronaut-projects/micronaut-gradle-plugin/releases
-        static micronaut = Versions.of("2.0.6")
+        static micronaut = "4.2.1"
 
         // https://plugins.gradle.org/plugin/com.gorylenko.gradle-git-properties
         static gradleGitProperties = Versions.of("2.4.1")
 
         // https://plugins.gradle.org/plugin/org.flywaydb.flyway
-        static flyway = Versions.of("9.2.2")
+        static flyway = Versions.of("10.4.1")
 
         // https://plugins.gradle.org/plugin/net.ltgt.apt
         static apt = Versions.of("0.21")
 
         // https://plugins.gradle.org/plugin/io.gitlab.arturbosch.detekt
-        static detekt = Versions.of("1.21.0")
+        static detekt = Versions.of("1.23.4")
 
         // https://plugins.gradle.org/plugin/com.diffplug.spotless
-        static spotless = Versions.of("6.10.0")
+        static spotless = Versions.of("6.23.3")
 
         // https://plugins.gradle.org/plugin/com.google.cloud.tools.jib
-        static jib = Versions.of("3.3.0")
+        static jib = Versions.of("3.4.0")
 
         // https://plugins.gradle.org/plugin/io.freefair.lombok
-        static lombok = Versions.of("6.5.1")
-
-        // https://plugins.gradle.org/plugin/org.jetbrains.kotlin.plugin.allopen
-        // https://plugins.gradle.org/plugin/org.jetbrains.kotlin.plugin.spring
-        static kotlinPlugins = Versions.of("1.6.10", "1.6.21", "1.7.0", "1.7.10", "1.7.22", "1.8.0")
+        static lombok = Versions.of("8.4")
 
         // https://plugins.gradle.org/plugin/com.moowork.grunt
         // https://plugins.gradle.org/plugin/com.moowork.gulp
         // https://plugins.gradle.org/plugin/com.moowork.node
         static node = Versions.of("1.3.1")
 
-        // https://plugins.gradle.org/plugin/org.jlleitschuh.gradle.ktlint
-        static ktlint = Versions.of("11.0.0")
-
         // https://plugins.gradle.org/plugin/com.github.node-gradle.node
-        static newNode = Versions.of("3.4.0")
+        static newNode = Versions.of("7.0.1")
 
-        // https://github.com/davidmc24/gradle-avro-plugin
-        static avro = Versions.of("1.3.0")
+        // https://plugins.gradle.org/plugin/org.jlleitschuh.gradle.ktlint
+        static ktlint = Versions.of("12.0.3")
+
+        // https://plugins.gradle.org/plugin/org.jlleitschuh.gradle.ktlint-idea
+        static ktlintIdea = Versions.of("11.6.1")
+
+        // https://github.com/davidmc24/gradle-avro-plugin/releases
+        static avro = Versions.of("1.9.1")
 
         // https://plugins.gradle.org/plugin/io.spring.nohttp
-        static nohttp = Versions.of("0.0.10")
+        static nohttp = Versions.of("0.0.11")
 
         // https://plugins.gradle.org/plugin/org.jenkins-ci.jpi
-        static jenkinsJpi = Versions.of("0.44.0")
+        static jenkinsJpi = Versions.of("0.50.0")
+
+        // https://mvnrepository.com/artifact/com.guardsquare/proguard-gradle
+        static proguardGradle = "7.4.1"
+
+        // https://plugins.gradle.org/plugin/com.palantir.consistent-versions
+        static palantirConsistentVersions = "2.17.0"
+
+        // https://github.com/etiennestuder/teamcity-build-scan-plugin/releases
+        static teamCityGradlePluginRef = "v0.35"
+
+        // https://github.com/jenkinsci/gradle-plugin/releases
+        static jenkinsGradlePluginRef = "gradle-2.9"
+
+        // https://github.com/gradle/gradle-enterprise-bamboo-plugin/releases
+        static bambooGradlePluginRef = "gradle-enterprise-bamboo-plugin-1.2.0"
     }
 
     static class Versions implements Iterable<String> {
@@ -196,23 +203,6 @@ abstract class AbstractSmokeTest extends Specification {
         }
 
         final List<String> versions
-
-        String latest() {
-            versions.last()
-        }
-
-        String latestStable() {
-            versions.reverse().find { version ->
-                !version.containsIgnoreCase("rc") &&
-                !version.containsIgnoreCase("beta") &&
-                !version.containsIgnoreCase("alpha") &&
-                !version.containsIgnoreCase("milestone")
-            }
-        }
-
-        String latestStartsWith(String prefix) {
-            return versions.reverse().find { it.startsWith(prefix) }
-        }
 
         private Versions(String... given) {
             versions = Arrays.asList(given)
@@ -229,8 +219,9 @@ abstract class AbstractSmokeTest extends Specification {
     @TempDir
     File testProjectDir
     File buildFile
-
     File settingsFile
+    @TempDir
+    File buildCacheDir
 
     def setup() {
         buildFile = new File(testProjectDir, defaultBuildFileName)
@@ -260,10 +251,11 @@ abstract class AbstractSmokeTest extends Specification {
             .withProjectDir(testProjectDir)
             .forwardOutput()
             .withArguments(
-                tasks.toList() + outputParameters() + repoMirrorParameters() + configurationCacheParameters() + toolchainParameters()
+                tasks.toList() + outputParameters() + repoMirrorParameters() + configurationCacheParameters() + toolchainParameters() + kotlinDslParameters()
             ) as DefaultGradleRunner
         gradleRunner.withJvmArguments(["-Xmx8g", "-XX:MaxMetaspaceSize=1024m", "-XX:+HeapDumpOnOutOfMemoryError"])
         return new SmokeTestGradleRunner(gradleRunner)
+            .withBuildOperationTracing(file("operations").absolutePath)
     }
 
     private List<String> configurationCacheParameters() {
@@ -273,7 +265,6 @@ abstract class AbstractSmokeTest extends Specification {
             parameters += [
                 "--${ConfigurationCacheOption.LONG_OPTION}".toString(),
                 "-D${ConfigurationCacheMaxProblemsOption.PROPERTY_NAME}=$maxProblems".toString(),
-                "-D${BuildOperationTrace.SYSPROP}=${buildOperationTracePath()}".toString()
             ]
             if (maxProblems > 0) {
                 parameters += ["--${ConfigurationCacheProblemsOption.LONG_OPTION}=warn".toString(),]
@@ -306,32 +297,16 @@ abstract class AbstractSmokeTest extends Specification {
         ]
     }
 
+    private static List<String> kotlinDslParameters() {
+        return [
+            // Having this unset is now deprecated, will default to `false` in Gradle 9.0
+            // TODO remove - see https://github.com/gradle/gradle/issues/26810
+            '-Dorg.gradle.kotlin.dsl.skipMetadataVersionCheck=false',
+        ]
+    }
+
     protected int maxConfigurationCacheProblems() {
         return 0
-    }
-
-    protected void assertConfigurationCacheStateStored() {
-        if (GradleContextualExecuter.isConfigCache()) {
-            newConfigurationCacheBuildOperationsFixture().assertStateStored()
-        }
-    }
-
-    protected void assertConfigurationCacheStateLoaded() {
-        if (GradleContextualExecuter.isConfigCache()) {
-            newConfigurationCacheBuildOperationsFixture().assertStateLoaded()
-        }
-    }
-
-    private ConfigurationCacheBuildOperationsFixture newConfigurationCacheBuildOperationsFixture() {
-        return new ConfigurationCacheBuildOperationsFixture(
-            new BuildOperationTreeFixture(
-                BuildOperationTrace.read(buildOperationTracePath())
-            )
-        )
-    }
-
-    private String buildOperationTracePath() {
-        return file("operations").absolutePath
     }
 
     protected void useSample(String sampleDirectory) {
@@ -344,9 +319,6 @@ abstract class AbstractSmokeTest extends Specification {
         if (AGP_VERSIONS.isAgpNightly(agpVersion)) {
             def init = AGP_VERSIONS.createAgpNightlyRepositoryInitScript()
             extraArgs += ["-I", init.canonicalPath]
-        }
-        if (agpVersion.startsWith("7.2") && JavaVersion.current().java9Compatible) {
-            runner = runner.withJvmArguments('--add-opens', 'java.logging/java.util.logging=ALL-UNNAMED')
         }
         return runner.withArguments([runner.arguments, extraArgs].flatten())
     }
@@ -361,6 +333,16 @@ abstract class AbstractSmokeTest extends Specification {
             text = text.replaceAll("\\\$${var}".toString(), value)
         }
         file.text = text
+    }
+
+    protected void setupLocalBuildCache() {
+        settingsFile << """
+            buildCache {
+                local {
+                    directory = new File("${TextUtil.normaliseFileSeparators(buildCacheDir.absolutePath)}")
+                }
+            }
+        """
     }
 
     protected static String jcenterRepository(GradleDsl dsl = GROOVY) {
